fix animations on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
   height: 100vh;
 }
 
- .bird {
+.bird {
   position: relative;
   top: 100px;
   left: 200px;
@@ -56,123 +56,19 @@ body {
   top: 100px;
 }
 
-/* 
-
-@keyframes fly-cycle {
-  100% {
-    background-position: -900px 0;
-  }
-} */
-
-
-
-/* .card-title {
-  text-align: center;
-  font-size: 0.8em;
-}
-
-.card-text {
-  word-break: break-all;
-  font-size: 0.75em;
-}
-
-.card-body .btn-primary {
-  font-size: 0.7em;
-  display: inline-block;
-  width: 100%;
-}
-
-.card-body {
-  position: relative;
-  top: 60px;
-} */
-/* 
-@media only screen and (min-width: 400px) and (max-width: 599px) {
-
-
-  .ul {
-    display: flex;
-    flex-direction: column;
+@media only screen and (max-width: 689px) {
+  .bird .iSDRXq {
+    position: absolute;
+    left: 20px;
   }
 
-  .cardo {
-    flex: 50%;
-    height: 46vh;
+  .bird .eCrzXg {
+    position: absolute;
+    left: -197px;
   }
 
-  .card-body {
-    position: relative;
-    top: 90px;
-  }
-
-  .card__svg {
-    top: -20px;
+  .bird .cxWuA {
+    position: absolute;
+    left: -30px;
   }
 }
-
-
-@media only screen and (min-width: 600px) and (max-width: 767px) {
-
-
-  .cardo {
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column wrap;
-    align-content: center;
-
-  }
-
-  .card-body {
-    position: relative;
-    top: 65px;
-  }
-
-  .card__svg {
-    top: 80px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 899px) {
-  .cardo {
-    height: 50vh;
-  }
-
-  .card-body {
-    position: relative;
-    top: 85px;
-  }
-
-  .card__svg {
-    top: 80px;
-  }
-}
-
-@media only screen and (min-width: 900px) and (max-width: 1149px) {
-  .cardo {
-    height: 55vh;
-  }
-
-  .card-body {
-    position: relative;
-    top: 90px;
-  }
-
-  .card__svg {
-    top: 50px;
-  }
-}
-
-@media only screen and (min-width: 1150px) and (max-width: 1390px) {
-
-  .cardo {
-    height: 55vh;
-  }
-
-  .card-body {
-    position: relative;
-    top: 90px;
-  }
-
-} */
